# epsilon-lab

./: .env.local.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml
crates/dp_engine/: Cargo.toml
crates/dp_engine/src/: lib.rs
docs/: INSTRUCTORS.md  SUPPORT.md
public/: robots.txt  sitemap.xml
src/app/: layout.tsx  page.tsx
src/app/appendix/: page.tsx
src/app/budget/: page.tsx
src/app/classroom-pack/: page.tsx
src/app/compare/: page.tsx
src/app/composition/: page.tsx
src/app/contact/: page.tsx
src/app/embed/: page.tsx
src/app/for-instructors/: page.tsx
src/app/health/: page.tsx
src/app/instructor/: page.tsx
src/app/lesson-plan/: page.tsx
src/app/license/: page.tsx
src/app/mechanisms/: page.tsx
src/components/: BudgetBar.tsx  ClassSessionChecklist.tsx  ClientShell.tsx  CompositionPanel.tsx  ControlPanel.tsx  DatasetUpload.tsx  DiagnosticsPanel.tsx  EmbedCopyButton.tsx  ErrorBoundary.tsx  Footer.tsx  FormulaBlock.tsx  Header.tsx  InstructorDashboard.tsx  Logo.tsx  Math.tsx  MechanismCard.tsx  ModeToggle.tsx  Nav.tsx  ParamSlider.tsx  PresetPicker.tsx  PrivacyAccountant.tsx  References.tsx  ResultsPanel.tsx  Simulator.tsx  TheoryPanel.tsx  ToastProvider.tsx
src/lib/: analytics.ts  contactValidation.ts  datasets.ts  env.ts  logger.ts  perf.ts  version.ts
tests/: analytics.test.ts  contactValidation.test.ts  content.test.ts  featureFlags.test.ts  mapSimResponse.test.ts  perf.test.ts  presets.test.ts  reliability.test.ts  stripe.test.ts  urlState.test.ts
(+36 files in other folders)
